<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context="com.example.lucaandrei.picturerecipealignment.tabs.IngredientsFragment"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ingredient_input"
            android:layout_width="280dp"
            android:layout_height="67dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/ingredients_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.344" />

        <ListView
            android:id="@+id/ingredients_list"
            android:layout_width="368dp"
            android:layout_height="214dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_ingredient"
            android:layout_width="47dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="+"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/ingredients_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toEndOf="@+id/ingredient_input"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submit_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="84dp"
            android:onClick="onButtonSubmitClick"
            android:text="Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/use_sse"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="21dp"
            android:text="SSE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_ingredients" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
</ScrollView>